Update package.json, add key repository

--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "test",
     "start": "nodemon src/index"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/laerciodev/api-ead"
+  },
   "keywords": [
     "Plataforma",
     "EAD",
@@ -20,7 +24,6 @@
     "nodemon": "^1.19.0"
   },
   "dependencies": {
-    "@hapi/hapi": "^18.3.1",
-    "save": "^2.3.3"
+    "@hapi/hapi": "^18.3.1"
   }
 }
